[gd_scene load_steps=7 format=3 uid="uid://hx0r4gi4l48w"]

[ext_resource type="TileSet" uid="uid://bncjfijsakmcp" path="res://Assets/Indoor_floor_tilemap.tres" id="1_ankvb"]
[ext_resource type="Script" uid="uid://ohqg07ckpg4k" path="res://casino.gd" id="1_upjqo"]
[ext_resource type="PackedScene" uid="uid://c1b8ixx42r41l" path="res://player.tscn" id="2_py0f0"]
[ext_resource type="Texture2D" uid="uid://bjvparhpmdxfn" path="res://Assets/Places/roulettetable.png" id="2_upjqo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_upjqo"]
size = Vector2(131, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j55sx"]
size = Vector2(64, 2)

[node name="Casino" type="Node2D"]
script = ExtResource("1_upjqo")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_ankvb")
format = 2
layer_0/tile_data = PackedInt32Array(0, 327680, 0, 65536, 327680, 1, 131072, 327680, 1, 196608, 327680, 1, 262144, 327680, 1, 327680, 327680, 1, 393216, 327680, 1, 458752, 327680, 1, 524288, 327680, 1, 589824, 327680, 1, 655360, 327680, 1, 720896, 327680, 1, 786432, 327680, 1, 851968, 327680, 1, 917504, 327680, 1, 983040, 327680, 1, 1048576, 327680, 1, 1441792, 327680, 2, 1441793, 393216, 2, 1441794, 393216, 2, 1441795, 393216, 2, 1441796, 393216, 2, 1441797, 393216, 2, 1441798, 393216, 2, 1441799, 393216, 2, 1441800, 393216, 2, 1441801, 393216, 2, 1441802, 393216, 2, 1441803, 393216, 2, 1441804, 393216, 2, 1441805, 393216, 2, 1441806, 393216, 2, 1441807, 393216, 2, 1441808, 393216, 2, 1441809, 393216, 2, 1441810, 393216, 2, 1441811, 393216, 2, 1441812, 393216, 2, 1441813, 393216, 2, 1441814, 393216, 2, 1441815, 0, 3, 1441816, 0, 3, 1441817, 0, 3, 1441818, 0, 3, 1441819, 393216, 2, 1441820, 393216, 2, 1441821, 393216, 2, 1441822, 393216, 2, 1441823, 393216, 2, 1441824, 393216, 2, 1441825, 393216, 2, 1441826, 393216, 2, 1441827, 393216, 2, 1441828, 393216, 2, 1441829, 393216, 2, 1441830, 393216, 2, 1441831, 393216, 2, 1441832, 393216, 2, 1441833, 458752, 2, 1310761, 458752, 1, 1376297, 458752, 1, 1179689, 458752, 1, 1245225, 458752, 1, 1048617, 458752, 1, 1114153, 458752, 1, 917545, 458752, 1, 983081, 458752, 1, 786473, 458752, 1, 852009, 458752, 1, 655401, 458752, 1, 720937, 458752, 1, 524329, 458752, 1, 589865, 458752, 1, 458793, 458752, 1, 393257, 458752, 1, 327721, 458752, 1, 262185, 458752, 1, 196649, 458752, 1, 131113, 458752, 1, 65577, 458752, 1, 41, 458752, 0, 1, 393216, 0, 2, 393216, 0, 3, 393216, 0, 4, 393216, 0, 5, 393216, 0, 6, 393216, 0, 7, 393216, 0, 8, 393216, 0, 9, 393216, 0, 10, 393216, 0, 11, 393216, 0, 12, 393216, 0, 13, 393216, 0, 14, 393216, 0, 15, 393216, 0, 16, 393216, 0, 17, 393216, 0, 18, 393216, 0, 19, 393216, 0, 20, 393216, 0, 21, 393216, 0, 22, 393216, 0, 23, 393216, 0, 24, 393216, 0, 25, 393216, 0, 26, 393216, 0, 27, 393216, 0, 28, 393216, 0, 29, 393216, 0, 30, 393216, 0, 31, 393216, 0, 32, 393216, 0, 33, 393216, 0, 34, 393216, 0, 35, 393216, 0, 36, 393216, 0, 37, 393216, 0, 38, 393216, 0, 39, 393216, 0, 40, 393216, 0, 1376256, 327680, 1, 1310720, 327680, 1, 1245184, 327680, 1, 1179648, 327680, 1, 1114112, 327680, 1, 65537, 393216, 1, 131073, 393216, 1, 196609, 393216, 1, 262145, 393216, 1, 327681, 393216, 1, 393217, 393216, 1, 458753, 393216, 1, 524289, 393216, 1, 589825, 393216, 1, 655361, 393216, 1, 720897, 393216, 1, 786433, 393216, 1, 851969, 393216, 1, 917505, 393216, 1, 983041, 393216, 1, 1048577, 393216, 1, 1114113, 393216, 1, 1179649, 393216, 1, 1245185, 393216, 1, 1310721, 393216, 1, 1376257, 393216, 1, 65538, 393216, 1, 131074, 393216, 1, 196610, 393216, 1, 262146, 393216, 1, 327682, 393216, 1, 393218, 393216, 1, 458754, 393216, 1, 524290, 393216, 1, 589826, 393216, 1, 655362, 393216, 1, 720898, 393216, 1, 786434, 393216, 1, 851970, 393216, 1, 917506, 393216, 1, 983042, 393216, 1, 1048578, 393216, 1, 1114114, 393216, 1, 1179650, 393216, 1, 1245186, 393216, 1, 1310722, 393216, 1, 1376258, 393216, 1, 65539, 393216, 1, 131075, 393216, 1, 196611, 393216, 1, 262147, 393216, 1, 327683, 393216, 1, 393219, 393216, 1, 458755, 393216, 1, 524291, 393216, 1, 589827, 393216, 1, 655363, 393216, 1, 720899, 393216, 1, 786435, 393216, 1, 851971, 393216, 1, 917507, 393216, 1, 983043, 393216, 1, 1048579, 393216, 1, 1114115, 393216, 1, 1179651, 393216, 1, 1245187, 393216, 1, 1310723, 393216, 1, 1376259, 393216, 1, 65540, 393216, 1, 131076, 393216, 1, 196612, 393216, 1, 262148, 393216, 1, 327684, 393216, 1, 393220, 393216, 1, 458756, 393216, 1, 524292, 393216, 1, 589828, 393216, 1, 655364, 393216, 1, 720900, 393216, 1, 786436, 393216, 1, 851972, 393216, 1, 917508, 393216, 1, 983044, 393216, 1, 1048580, 393216, 1, 1114116, 393216, 1, 1179652, 393216, 1, 1245188, 393216, 1, 1310724, 393216, 1, 1376260, 393216, 1, 65541, 393216, 1, 131077, 393216, 1, 196613, 393216, 1, 262149, 393216, 1, 327685, 393216, 1, 393221, 393216, 1, 458757, 393216, 1, 524293, 393216, 1, 589829, 393216, 1, 655365, 393216, 1, 720901, 393216, 1, 786437, 393216, 1, 851973, 393216, 1, 917509, 393216, 1, 983045, 393216, 1, 1048581, 393216, 1, 1114117, 393216, 1, 1179653, 393216, 1, 1245189, 393216, 1, 1310725, 393216, 1, 1376261, 393216, 1, 65542, 393216, 1, 131078, 393216, 1, 196614, 393216, 1, 262150, 393216, 1, 327686, 393216, 1, 393222, 393216, 1, 458758, 393216, 1, 524294, 393216, 1, 589830, 393216, 1, 655366, 393216, 1, 720902, 393216, 1, 786438, 393216, 1, 851974, 393216, 1, 917510, 393216, 1, 983046, 393216, 1, 1048582, 393216, 1, 1114118, 393216, 1, 1179654, 393216, 1, 1245190, 393216, 1, 1310726, 393216, 1, 1376262, 393216, 1, 65543, 393216, 1, 131079, 393216, 1, 196615, 393216, 1, 262151, 393216, 1, 327687, 393216, 1, 393223, 393216, 1, 458759, 393216, 1, 524295, 393216, 1, 589831, 393216, 1, 655367, 393216, 1, 720903, 393216, 1, 786439, 393216, 1, 851975, 393216, 1, 917511, 393216, 1, 983047, 393216, 1, 1048583, 393216, 1, 1114119, 393216, 1, 1179655, 393216, 1, 1245191, 393216, 1, 1310727, 393216, 1, 1376263, 393216, 1, 65544, 393216, 1, 131080, 393216, 1, 196616, 393216, 1, 262152, 393216, 1, 327688, 393216, 1, 393224, 393216, 1, 458760, 393216, 1, 524296, 393216, 1, 589832, 393216, 1, 655368, 393216, 1, 720904, 393216, 1, 786440, 393216, 1, 851976, 393216, 1, 917512, 393216, 1, 983048, 393216, 1, 1048584, 393216, 1, 1114120, 393216, 1, 1179656, 393216, 1, 1245192, 393216, 1, 1310728, 393216, 1, 1376264, 393216, 1, 65545, 393216, 1, 131081, 393216, 1, 196617, 393216, 1, 262153, 393216, 1, 327689, 393216, 1, 393225, 393216, 1, 458761, 393216, 1, 524297, 393216, 1, 589833, 393216, 1, 655369, 393216, 1, 720905, 393216, 1, 786441, 393216, 1, 851977, 393216, 1, 917513, 393216, 1, 983049, 393216, 1, 1048585, 393216, 1, 1114121, 393216, 1, 1179657, 393216, 1, 1245193, 393216, 1, 1310729, 393216, 1, 1376265, 393216, 1, 65546, 393216, 1, 131082, 393216, 1, 196618, 393216, 1, 262154, 393216, 1, 327690, 393216, 1, 393226, 393216, 1, 458762, 393216, 1, 524298, 393216, 1, 589834, 393216, 1, 655370, 393216, 1, 720906, 393216, 1, 786442, 393216, 1, 851978, 393216, 1, 917514, 393216, 1, 983050, 393216, 1, 1048586, 393216, 1, 1114122, 393216, 1, 1179658, 393216, 1, 1245194, 393216, 1, 1310730, 393216, 1, 1376266, 393216, 1, 65547, 393216, 1, 131083, 393216, 1, 196619, 393216, 1, 262155, 393216, 1, 327691, 393216, 1, 393227, 393216, 1, 458763, 393216, 1, 524299, 393216, 1, 589835, 393216, 1, 655371, 393216, 1, 720907, 393216, 1, 786443, 393216, 1, 851979, 393216, 1, 917515, 393216, 1, 983051, 393216, 1, 1048587, 393216, 1, 1114123, 393216, 1, 1179659, 393216, 1, 1245195, 393216, 1, 1310731, 393216, 1, 1376267, 393216, 1, 65548, 393216, 1, 131084, 393216, 1, 196620, 393216, 1, 262156, 393216, 1, 327692, 393216, 1, 393228, 393216, 1, 458764, 393216, 1, 524300, 393216, 1, 589836, 393216, 1, 655372, 393216, 1, 720908, 393216, 1, 786444, 393216, 1, 851980, 393216, 1, 917516, 393216, 1, 983052, 393216, 1, 1048588, 393216, 1, 1114124, 393216, 1, 1179660, 393216, 1, 1245196, 393216, 1, 1310732, 393216, 1, 1376268, 393216, 1, 65549, 393216, 1, 131085, 393216, 1, 196621, 393216, 1, 262157, 393216, 1, 327693, 393216, 1, 393229, 393216, 1, 458765, 393216, 1, 524301, 393216, 1, 589837, 393216, 1, 655373, 393216, 1, 720909, 393216, 1, 786445, 393216, 1, 851981, 393216, 1, 917517, 393216, 1, 983053, 393216, 1, 1048589, 393216, 1, 1114125, 393216, 1, 1179661, 393216, 1, 1245197, 393216, 1, 1310733, 393216, 1, 1376269, 393216, 1, 65550, 393216, 1, 131086, 393216, 1, 196622, 393216, 1, 262158, 393216, 1, 327694, 393216, 1, 393230, 393216, 1, 458766, 393216, 1, 524302, 393216, 1, 589838, 393216, 1, 655374, 393216, 1, 720910, 393216, 1, 786446, 393216, 1, 851982, 393216, 1, 917518, 393216, 1, 983054, 393216, 1, 1048590, 393216, 1, 1114126, 393216, 1, 1179662, 393216, 1, 1245198, 393216, 1, 1310734, 393216, 1, 1376270, 393216, 1, 65551, 393216, 1, 131087, 393216, 1, 196623, 393216, 1, 262159, 393216, 1, 327695, 393216, 1, 393231, 393216, 1, 458767, 393216, 1, 524303, 393216, 1, 589839, 393216, 1, 655375, 393216, 1, 720911, 393216, 1, 786447, 393216, 1, 851983, 393216, 1, 917519, 393216, 1, 983055, 393216, 1, 1048591, 393216, 1, 1114127, 393216, 1, 1179663, 393216, 1, 1245199, 393216, 1, 1310735, 393216, 1, 1376271, 393216, 1, 65552, 393216, 1, 131088, 393216, 1, 196624, 393216, 1, 262160, 393216, 1, 327696, 393216, 1, 393232, 393216, 1, 458768, 393216, 1, 524304, 393216, 1, 589840, 393216, 1, 655376, 393216, 1, 720912, 393216, 1, 786448, 393216, 1, 851984, 393216, 1, 917520, 393216, 1, 983056, 393216, 1, 1048592, 393216, 1, 1114128, 393216, 1, 1179664, 393216, 1, 1245200, 393216, 1, 1310736, 393216, 1, 1376272, 393216, 1, 65553, 393216, 1, 131089, 393216, 1, 196625, 393216, 1, 262161, 393216, 1, 327697, 393216, 1, 393233, 393216, 1, 458769, 393216, 1, 524305, 393216, 1, 589841, 393216, 1, 655377, 393216, 1, 720913, 393216, 1, 786449, 393216, 1, 851985, 393216, 1, 917521, 393216, 1, 983057, 393216, 1, 1048593, 393216, 1, 1114129, 393216, 1, 1179665, 393216, 1, 1245201, 393216, 1, 1310737, 393216, 1, 1376273, 393216, 1, 65554, 393216, 1, 131090, 393216, 1, 196626, 393216, 1, 262162, 393216, 1, 327698, 393216, 1, 393234, 393216, 1, 458770, 393216, 1, 524306, 393216, 1, 589842, 393216, 1, 655378, 393216, 1, 720914, 393216, 1, 786450, 393216, 1, 851986, 393216, 1, 917522, 393216, 1, 983058, 393216, 1, 1048594, 393216, 1, 1114130, 393216, 1, 1179666, 393216, 1, 1245202, 393216, 1, 1310738, 393216, 1, 1376274, 393216, 1, 65555, 393216, 1, 131091, 393216, 1, 196627, 393216, 1, 262163, 393216, 1, 327699, 393216, 1, 393235, 393216, 1, 458771, 393216, 1, 524307, 393216, 1, 589843, 393216, 1, 655379, 393216, 1, 720915, 393216, 1, 786451, 393216, 1, 851987, 393216, 1, 917523, 393216, 1, 983059, 393216, 1, 1048595, 393216, 1, 1114131, 393216, 1, 1179667, 393216, 1, 1245203, 393216, 1, 1310739, 393216, 1, 1376275, 393216, 1, 65556, 393216, 1, 131092, 393216, 1, 196628, 393216, 1, 262164, 393216, 1, 327700, 393216, 1, 393236, 393216, 1, 458772, 393216, 1, 524308, 393216, 1, 589844, 393216, 1, 655380, 393216, 1, 720916, 393216, 1, 786452, 393216, 1, 851988, 393216, 1, 917524, 393216, 1, 983060, 393216, 1, 1048596, 393216, 1, 1114132, 393216, 1, 1179668, 393216, 1, 1245204, 393216, 1, 1310740, 393216, 1, 1376276, 393216, 1, 65557, 393216, 1, 131093, 393216, 1, 196629, 393216, 1, 262165, 393216, 1, 327701, 393216, 1, 393237, 393216, 1, 458773, 393216, 1, 524309, 393216, 1, 589845, 393216, 1, 655381, 393216, 1, 720917, 393216, 1, 786453, 393216, 1, 851989, 393216, 1, 917525, 393216, 1, 983061, 393216, 1, 1048597, 393216, 1, 1114133, 393216, 1, 1179669, 393216, 1, 1245205, 393216, 1, 1310741, 393216, 1, 1376277, 393216, 1, 65558, 393216, 1, 131094, 393216, 1, 196630, 393216, 1, 262166, 393216, 1, 327702, 393216, 1, 393238, 393216, 1, 458774, 393216, 1, 524310, 393216, 1, 589846, 393216, 1, 655382, 393216, 1, 720918, 393216, 1, 786454, 393216, 1, 851990, 393216, 1, 917526, 393216, 1, 983062, 393216, 1, 1048598, 393216, 1, 1114134, 393216, 1, 1179670, 393216, 1, 1245206, 393216, 1, 1310742, 393216, 1, 1376278, 393216, 1, 65559, 393216, 1, 131095, 393216, 1, 196631, 393216, 1, 262167, 393216, 1, 327703, 393216, 1, 393239, 393216, 1, 458775, 393216, 1, 524311, 393216, 1, 589847, 393216, 1, 655383, 393216, 1, 720919, 393216, 1, 786455, 393216, 1, 851991, 393216, 1, 917527, 393216, 1, 983063, 393216, 1, 1048599, 393216, 1, 1114135, 393216, 1, 1179671, 393216, 1, 1245207, 393216, 1, 1310743, 393216, 1, 1376279, 393216, 1, 65560, 393216, 1, 131096, 393216, 1, 196632, 393216, 1, 262168, 393216, 1, 327704, 393216, 1, 393240, 393216, 1, 458776, 393216, 1, 524312, 393216, 1, 589848, 393216, 1, 655384, 393216, 1, 720920, 393216, 1, 786456, 393216, 1, 851992, 393216, 1, 917528, 393216, 1, 983064, 393216, 1, 1048600, 393216, 1, 1114136, 393216, 1, 1179672, 393216, 1, 1245208, 393216, 1, 1310744, 393216, 1, 1376280, 393216, 1, 65561, 393216, 1, 131097, 393216, 1, 196633, 393216, 1, 262169, 393216, 1, 327705, 393216, 1, 393241, 393216, 1, 458777, 393216, 1, 524313, 393216, 1, 589849, 393216, 1, 655385, 393216, 1, 720921, 393216, 1, 786457, 393216, 1, 851993, 393216, 1, 917529, 393216, 1, 983065, 393216, 1, 1048601, 393216, 1, 1114137, 393216, 1, 1179673, 393216, 1, 1245209, 393216, 1, 1310745, 393216, 1, 1376281, 393216, 1, 65562, 393216, 1, 131098, 393216, 1, 196634, 393216, 1, 262170, 393216, 1, 327706, 393216, 1, 393242, 393216, 1, 458778, 393216, 1, 524314, 393216, 1, 589850, 393216, 1, 655386, 393216, 1, 720922, 393216, 1, 786458, 393216, 1, 851994, 393216, 1, 917530, 393216, 1, 983066, 393216, 1, 1048602, 393216, 1, 1114138, 393216, 1, 1179674, 393216, 1, 1245210, 393216, 1, 1310746, 393216, 1, 1376282, 393216, 1, 65563, 393216, 1, 131099, 393216, 1, 196635, 393216, 1, 262171, 393216, 1, 327707, 393216, 1, 393243, 393216, 1, 458779, 393216, 1, 524315, 393216, 1, 589851, 393216, 1, 655387, 393216, 1, 720923, 393216, 1, 786459, 393216, 1, 851995, 393216, 1, 917531, 393216, 1, 983067, 393216, 1, 1048603, 393216, 1, 1114139, 393216, 1, 1179675, 393216, 1, 1245211, 393216, 1, 1310747, 393216, 1, 1376283, 393216, 1, 65564, 393216, 1, 131100, 393216, 1, 196636, 393216, 1, 262172, 393216, 1, 327708, 393216, 1, 393244, 393216, 1, 458780, 393216, 1, 524316, 393216, 1, 589852, 393216, 1, 655388, 393216, 1, 720924, 393216, 1, 786460, 393216, 1, 851996, 393216, 1, 917532, 393216, 1, 983068, 393216, 1, 1048604, 393216, 1, 1114140, 393216, 1, 1179676, 393216, 1, 1245212, 393216, 1, 1310748, 393216, 1, 1376284, 393216, 1, 65565, 393216, 1, 131101, 393216, 1, 196637, 393216, 1, 262173, 393216, 1, 327709, 393216, 1, 393245, 393216, 1, 458781, 393216, 1, 524317, 393216, 1, 589853, 393216, 1, 655389, 393216, 1, 720925, 393216, 1, 786461, 393216, 1, 851997, 393216, 1, 917533, 393216, 1, 983069, 393216, 1, 1048605, 393216, 1, 1114141, 393216, 1, 1179677, 393216, 1, 1245213, 393216, 1, 1310749, 393216, 1, 1376285, 393216, 1, 65566, 393216, 1, 131102, 393216, 1, 196638, 393216, 1, 262174, 393216, 1, 327710, 393216, 1, 393246, 393216, 1, 458782, 393216, 1, 524318, 393216, 1, 589854, 393216, 1, 655390, 393216, 1, 720926, 393216, 1, 786462, 393216, 1, 851998, 393216, 1, 917534, 393216, 1, 983070, 393216, 1, 1048606, 393216, 1, 1114142, 393216, 1, 1179678, 393216, 1, 1245214, 393216, 1, 1310750, 393216, 1, 1376286, 393216, 1, 65567, 393216, 1, 131103, 393216, 1, 196639, 393216, 1, 262175, 393216, 1, 327711, 393216, 1, 393247, 393216, 1, 458783, 393216, 1, 524319, 393216, 1, 589855, 393216, 1, 655391, 393216, 1, 720927, 393216, 1, 786463, 393216, 1, 851999, 393216, 1, 917535, 393216, 1, 983071, 393216, 1, 1048607, 393216, 1, 1114143, 393216, 1, 1179679, 393216, 1, 1245215, 393216, 1, 1310751, 393216, 1, 1376287, 393216, 1, 65568, 393216, 1, 131104, 393216, 1, 196640, 393216, 1, 262176, 393216, 1, 327712, 393216, 1, 393248, 393216, 1, 458784, 393216, 1, 524320, 393216, 1, 589856, 393216, 1, 655392, 393216, 1, 720928, 393216, 1, 786464, 393216, 1, 852000, 393216, 1, 917536, 393216, 1, 983072, 393216, 1, 1048608, 393216, 1, 1114144, 393216, 1, 1179680, 393216, 1, 1245216, 393216, 1, 1310752, 393216, 1, 1376288, 393216, 1, 65569, 393216, 1, 131105, 393216, 1, 196641, 393216, 1, 262177, 393216, 1, 327713, 393216, 1, 393249, 393216, 1, 458785, 393216, 1, 524321, 393216, 1, 589857, 393216, 1, 655393, 393216, 1, 720929, 393216, 1, 786465, 393216, 1, 852001, 393216, 1, 917537, 393216, 1, 983073, 393216, 1, 1048609, 393216, 1, 1114145, 393216, 1, 1179681, 393216, 1, 1245217, 393216, 1, 1310753, 393216, 1, 1376289, 393216, 1, 65570, 393216, 1, 131106, 393216, 1, 196642, 393216, 1, 262178, 393216, 1, 327714, 393216, 1, 393250, 393216, 1, 458786, 393216, 1, 524322, 393216, 1, 589858, 393216, 1, 655394, 393216, 1, 720930, 393216, 1, 786466, 393216, 1, 852002, 393216, 1, 917538, 393216, 1, 983074, 393216, 1, 1048610, 393216, 1, 1114146, 393216, 1, 1179682, 393216, 1, 1245218, 393216, 1, 1310754, 393216, 1, 1376290, 393216, 1, 65571, 393216, 1, 131107, 393216, 1, 196643, 393216, 1, 262179, 393216, 1, 327715, 393216, 1, 393251, 393216, 1, 458787, 393216, 1, 524323, 393216, 1, 589859, 393216, 1, 655395, 393216, 1, 720931, 393216, 1, 786467, 393216, 1, 852003, 393216, 1, 917539, 393216, 1, 983075, 393216, 1, 1048611, 393216, 1, 1114147, 393216, 1, 1179683, 393216, 1, 1245219, 393216, 1, 1310755, 393216, 1, 1376291, 393216, 1, 65572, 393216, 1, 131108, 393216, 1, 196644, 393216, 1, 262180, 393216, 1, 327716, 393216, 1, 393252, 393216, 1, 458788, 393216, 1, 524324, 393216, 1, 589860, 393216, 1, 655396, 393216, 1, 720932, 393216, 1, 786468, 393216, 1, 852004, 393216, 1, 917540, 393216, 1, 983076, 393216, 1, 1048612, 393216, 1, 1114148, 393216, 1, 1179684, 393216, 1, 1245220, 393216, 1, 1310756, 393216, 1, 1376292, 393216, 1, 65573, 393216, 1, 131109, 393216, 1, 196645, 393216, 1, 262181, 393216, 1, 327717, 393216, 1, 393253, 393216, 1, 458789, 393216, 1, 524325, 393216, 1, 589861, 393216, 1, 655397, 393216, 1, 720933, 393216, 1, 786469, 393216, 1, 852005, 393216, 1, 917541, 393216, 1, 983077, 393216, 1, 1048613, 393216, 1, 1114149, 393216, 1, 1179685, 393216, 1, 1245221, 393216, 1, 1310757, 393216, 1, 1376293, 393216, 1, 65574, 393216, 1, 131110, 393216, 1, 196646, 393216, 1, 262182, 393216, 1, 327718, 393216, 1, 393254, 393216, 1, 458790, 393216, 1, 524326, 393216, 1, 589862, 393216, 1, 655398, 393216, 1, 720934, 393216, 1, 786470, 393216, 1, 852006, 393216, 1, 917542, 393216, 1, 983078, 393216, 1, 1048614, 393216, 1, 1114150, 393216, 1, 1179686, 393216, 1, 1245222, 393216, 1, 1310758, 393216, 1, 1376294, 393216, 1, 65575, 393216, 1, 131111, 393216, 1, 196647, 393216, 1, 262183, 393216, 1, 327719, 393216, 1, 393255, 393216, 1, 458791, 393216, 1, 524327, 393216, 1, 589863, 393216, 1, 655399, 393216, 1, 720935, 393216, 1, 786471, 393216, 1, 852007, 393216, 1, 917543, 393216, 1, 983079, 393216, 1, 1048615, 393216, 1, 1114151, 393216, 1, 1179687, 393216, 1, 1245223, 393216, 1, 1310759, 393216, 1, 1376295, 393216, 1, 65576, 393216, 1, 131112, 393216, 1, 196648, 393216, 1, 262184, 393216, 1, 327720, 393216, 1, 393256, 393216, 1, 458792, 393216, 1, 524328, 393216, 1, 589864, 393216, 1, 655400, 393216, 1, 720936, 393216, 1, 786472, 393216, 1, 852008, 393216, 1, 917544, 393216, 1, 983080, 393216, 1, 1048616, 393216, 1, 1114152, 393216, 1, 1179688, 393216, 1, 1245224, 393216, 1, 1310760, 393216, 1, 1376296, 393216, 1)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(185, 234)
collision_layer = 3
collision_mask = 3

[node name="Roulette" type="Sprite2D" parent="Area2D"]
position = Vector2(-26, -114)
texture = ExtResource("2_upjqo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-25.5, -113.5)
shape = SubResource("RectangleShape2D_upjqo")

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(185, 234)
collision_layer = 3
collision_mask = 3

[node name="Roulette" type="Sprite2D" parent="Area2D2"]
position = Vector2(-27, 26)
texture = ExtResource("2_upjqo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-23, 25)
shape = SubResource("RectangleShape2D_upjqo")

[node name="Player" parent="." instance=ExtResource("2_py0f0")]
position = Vector2(320, 180)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(432, 368, 672, 368, 672, 0, 0, 0, 0, 368, 368, 368, 368, 364, 5, 364, 5, 4, 667, 4, 667, 364, 432, 364)

[node name="Exit" type="Area2D" parent="."]
<<<<<<< HEAD
collision_layer = 3
collision_mask = 3
=======
>>>>>>> a8e63f4c4dada4d13fd92272928fa07512fce834

[node name="CollisionShape" type="CollisionShape2D" parent="Exit"]
position = Vector2(400, 367)
shape = SubResource("RectangleShape2D_j55sx")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
